--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,13 @@ Imports:
     golem,
     shiny,
     pkgload,
-    magrittr
+    magrittr,
+    dplyr,
+    leaflet,
+    class,
+    KernSmooth,
+    sf,
+    plotly
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
