--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,12 @@ Imports:
     class,
     KernSmooth,
     sf,
-    plotly
+    plotly,
+    waiter,
+    echarts4r,
+    ggiraph,
+    patchwork,
+    gdtools
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
